product - fix overWidth (horizontal scrollbar)

--- a/css/index.css
+++ b/css/index.css
@@ -808,148 +808,6 @@ body:before {
     margin-bottom: 22.67vw;
   }
 }
-/* footer */
-.footer__adv {
-  background: #222224;
-  height: fit-content;
-  width: 100vw;
-}
-
-.footer__adv_content {
-  width: var(--content_width);
-  height: 100%;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 1.88vw;
-  justify-content: center;
-  padding: 100px 0px;
-}
-
-.footer__adv_item {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-
-.subscribe {
-  height: fit-content;
-  width: 100vw;
-  background: linear-gradient(rgba(244, 244, 244, 0.7) 100%, rgba(0, 0, 0, 0.5) 0%), url(img/subscribe_background.svg);
-  background-size: cover;
-}
-
-.subscribe:after {
-  content: "";
-  background: rgba(58, 56, 56, 0.86);
-  opacity: 1;
-  display: block;
-  width: 100%;
-  height: 100%;
-}
-
-.subscribe_content {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  height: 100%;
-  width: var(--content_width);
-  text-align: center;
-}
-
-.subscribe_content > .subscribe_action {
-  margin-right: 6.06vw;
-  padding: 150px 0px 156px 0px;
-}
-
-.subscribe_content > .about {
-  max-height: 225px;
-  max-width: 359px;
-  text-align: center;
-  padding: 97px 0px 126px 0px;
-}
-
-.subscribe_form {
-  width: 100%;
-  aspect-ratio: 356/49;
-  background: #E1E1E1;
-  border-radius: 162px;
-  overflow: hidden;
-}
-
-.subscribe_form button {
-  background: #E05C6E;
-  border: none;
-  width: 34.55%;
-  height: 100%;
-  padding: 0px;
-  cursor: pointer;
-  min-width: 85px;
-}
-
-.subscribe_action input[type=text] {
-  width: 65.45%;
-  margin-left: 6.18%;
-}
-
-.subscribe_form form {
-  display: flex;
-  height: 100%;
-  align-items: center;
-}
-
-.footer_end_content {
-  width: var(--content_width);
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-wrap: wrap;
-}
-
-.footer_end {
-  background: #222224;
-  width: 100vw;
-}
-
-@media (max-width: 768px) {
-  .subscribe_content {
-    flex-direction: column;
-  }
-  .subscribe {
-    height: fit-content;
-  }
-}
-@media (max-width: 768px) {
-  .footer__adv_content {
-    grid-template-columns: 46.88vw;
-    padding: 0px 0px 0px 0px;
-  }
-  .footer__adv {
-    height: fit-content;
-    padding: 48px 0px 64px 0px;
-  }
-  .subscribe_content > .about {
-    padding: 64px 0px 48px 0px;
-  }
-  .subscribe_content > .subscribe_action {
-    padding: 0px 0px 140px 0px;
-  }
-}
-@media (max-width: 481px) {
-  .footer__adv_content {
-    grid-template-columns: var(--content_width);
-  }
-  .footer__adv {
-    height: fit-content;
-  }
-  .footer__adv > * {
-    padding: 0px 0px 0px 0px;
-  }
-  .footer_end_content {
-    justify-content: center;
-  }
-}
-/* footer-end */
 .feature_items .item_image:after {
   content: "";
   background: rgba(58, 56, 56, 0.86);
